# service_utils_rs

./: .release.toml  .rustfmt.toml  Cargo.toml  LICENSE  README.md  examples_metadata.toml
.github/workflows/: rust.yml
config/: services.toml
examples/: db_example.rs  http_example.rs  http_server_example.rs  jwt_example.rs  liuyao_example.rs  llm_stream_req.rs  request_example.rs  socket_client.rs  socket_server.rs  string_util_example.rs
examples/common/: mod.rs  settings.rs
examples/config/: services.toml
examples/jwt/: .gitignore  Cargo.toml
examples/jwt/src/: main.rs  settings.rs
scripts/: test.sh
src/: error.rs  jwt.rs  lib.rs  settings.rs
src/services/: db.rs  http_client.rs  jwt.rs  mod.rs
src/services/http/: http_client.rs  http_server.rs  mod.rs  response.rs
src/services/http/middleware/: auth.rs  auth_mw.rs  cors.rs  mod.rs
src/services/websocket/: client.rs  client_no_router.rs  client_router.rs  connection.rs  handler copy.rs  handler.rs  mod.rs  server.rs  socket_events.rs  socket_mgr.rs
src/services/websocket/client/: client_connection.rs  client_router.rs  client_router_old.rs  mod.rs
src/services/websocket/server/: connection.rs  error_code.rs  events.rs  header_parser.rs  manager.rs  mod.rs  server_connection.rs  server_router.rs
src/utils/: config_util.rs  liu_yao.rs  mod.rs  request.rs  string_util.rs
tests/: feature_test.rs  test_config.toml
