[package]
name = "service_utils_rs"
version = "0.3.2"
edition = "2021"
authors = ["code-serenade <arthas.you@163.com>"]
description = "A brief description of your crate"
repository = "https://github.com/code-serenade/service_utils_rs"
homepage = "https://github.com/code-serenade/service_utils_rs"
license = "MIT"
documentation = "https://docs.rs/service_utils_rs"

[dependencies]
byteorder = "1.5.0"
bytes = "1.10.0"
chrono = "0.4.38"
config = "0.15.8"
futures = "0.3.30"
futures-util = "0.3.30"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.138"
url = "2.2"
thiserror = "2.0.11"
tokio = { version = "1", features = ["full"] }
jsonwebtoken = { version = "9.3.1", optional = true }
tokio-tungstenite = { version = "0.26", optional = true }
axum = { version = "0.8.1", features = ["macros"], optional = true }
reqwest = { version = "0.12.12", features = ["json"], optional = true }

surrealdb = { version = "2", optional = true }

[features]
jwt = ["jsonwebtoken"]
websocket = ["tokio-tungstenite"]
db = ["surrealdb"]
http = ["axum", "reqwest"]

full = ["jwt", "websocket", "db", "http"]

[package.metadata.docs.rs]
features = ["jwt", "websocket", "db", "http"]
