[package]
name = "service_utils_rs"
version = "0.3.19"
edition = "2024"
authors = ["code-serenade <arthas.you@163.com>"]
description = "A brief description of your crate"
repository = "https://github.com/code-serenade/service_utils_rs"
homepage = "https://github.com/code-serenade/service_utils_rs"
license = "MIT"
documentation = "https://docs.rs/service_utils_rs"

[dependencies]
byteorder = "1.5"
bytes = "1.10"
chrono = "0.4"
config = "0.15"
futures = "0.3"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
jsonwebtoken = { version = "9", optional = true }
tokio-tungstenite = { version = "0.26", optional = true }
axum = { version = "0.8", features = ["macros"], optional = true }
reqwest = { version = "0.12", features = ["json", "stream"], optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
surrealdb = { version = "2", optional = true }
rand = { version = "0.9" }
utoipa = { version = "5", optional = true }

[features]
jwt = ["jsonwebtoken"]
websocket = ["tokio-tungstenite"]
db = ["surrealdb"]
request = ["reqwest"]
http = ["axum", "tower-http", "utoipa"]

full = ["jwt", "websocket", "db", "http", "request"]
default = ["request"]

[package.metadata.docs.rs]
features = ["jwt", "websocket", "db", "http", "request"]
