[package]
name = "jwt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
service_utils_rs = { path = "../../", version = "0.1.0", features = ["jwt"] }
serde = { version = "1.0", features = ["derive"] }
config = "0.14"